# cross-chain-bridge

./: .gitignore  README.md  cross-chain-bridge.code-workspace
client/: README.md
docs/: README.md
docs/architecture/: bridge_architecture.md  v1_bridge_architecture.md  v2_bridge_architecture.md
ethereum-bridge/: hardhat.config.ts  package.json
scripts/: setup.sh  test-all.sh
solana-bridge/: .gitignore  Anchor.toml  Cargo.toml
solana-bridge/programs/amm/: Cargo.toml
solana-bridge/programs/amm/src/: lib.rs
solana-bridge/programs/amm/src/math/: mod.rs
solana-bridge/programs/bridge/: Cargo.toml
solana-bridge/programs/bridge/src/: lib.rs
solana-bridge/programs/bridge/src/instructions/: mod.rs
solana-bridge/programs/bridge/src/state/: mod.rs
solana-bridge/tests/: solana-bridge.js
