[package]
name = "amm"
version = "0.1.0"
description = "Automated Market Maker for cross-chain bridge"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
debug-math = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
borsh = "0.10.3"

[dev-dependencies]
solana-program-test = "~1.17"
